# transaction-risk-profiler

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  build_model.py  model.py  pylama.ini  pyproject.toml  setup.cfg
data/: README.md  dataset_card.yml
notebooks/: .flake8  0_EDA.ipynb  0_EDA.py
scripts/: gen_modules_graph.py
src/fraud_detection/: api_client.py  app.py  build_model.py  example_app.py  model.py  register.py
src/fraud_detection/utils/: head_json.py
src/transaction_risk_profiler/: __init__.py  register.py
src/transaction_risk_profiler/api/: api_client.py  sippin_flask.py
src/transaction_risk_profiler/common/enums/: dataset.py
src/transaction_risk_profiler/configs/: __init__.py  dataset_config.py  settings.py
src/transaction_risk_profiler/eda/: __init__.py  bar_charts.py  dependency_plots.py  histograms.py  historgrams.py
src/transaction_risk_profiler/feature_engineering/: categorical.py  feature_registry.py  features.py  simple_transforms.py
src/transaction_risk_profiler/io/: __init__.py  dataset_transporter.py  dataset_utils.py  loaders.py
src/transaction_risk_profiler/modeling/: baseline.py  benchmark.py  build_model.py  grid_search.py  make_predictions.py  metrics.py  model.py  model_notes.md  pair.md
src/transaction_risk_profiler/modeling/models/: baseline.py  build_model.py  model.py
src/transaction_risk_profiler/pipelines/: pipeline_utils.py  training_pipeline.py
src/transaction_risk_profiler/preprocessing/: aggregations.py  clean_test.py  description_knn.py  extractions.py  knn.py  org_desc_knn.py  preprocessing.py  scaling.py  seb.py  text.py  tfidf.py  time_series.py
src/transaction_risk_profiler/preprocessing/feature_engineering/: features.py
src/transaction_risk_profiler/transformers/: wrappers.py
src/transaction_risk_profiler/utils/: dataset_utils.py  head_json.py  text_utils.py
src/transaction_risk_profiler/web_app/: app.py  example_app.py
src/transaction_risk_profiler/web_app/templates/: dashboard.html.jinja
templates/: dashboard.html.jinja
tests/: model_test.py
